[package]
name = "html-builder"
version = "0.1.0"
edition = "2021"
bin = "generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11"
html-escape = "0.2"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"

[workspace]
members = ["generator"]
